--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Rock Paper Scissors</title>
 
-    <link rel="stylesheet" href="/RPS/style.css">
+    <link rel="stylesheet" href="/style.css">
 
   </head>
 
@@ -45,7 +45,7 @@
       Reset Score
     </button>
 
-    <script src="/RPS/main.js" ></script>
+    <script src="/main.js" ></script>
 
   </body>
 </html>
