update autoplay button html

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
     ">
       Reset Score
     </button>
+    
+    <button class="reset-score-button autoplay-button" onclick="autoplay()">
+      Autoplay
+    </button>
 
     <script src="main.js" ></script>
 
